--- a/_notebooks/2023-11-28-InternetLesson.ipynb
+++ b/_notebooks/2023-11-28-InternetLesson.ipynb
@@ -302,7 +302,16 @@
     "**HW: Answer all HW questions with a line of reasoning**\n",
     "**WILL BE GRADED ON ACCURACY AND REASONING**\n",
     "\n",
-    "\n",
+    "B - Handles the physical aspect and connection\n",
+    "C - \n",
+    "A - \n",
+    "B - \n",
+    "B - \n",
+    "A - \n",
+    "C - \n",
+    "C - \n",
+    "C - \n",
+    "C - \n",
     "\n",
     "\n",
     "\n",
