--- a/_notebooks/2023-11-28-InternetLesson.ipynb
+++ b/_notebooks/2023-11-28-InternetLesson.ipynb
@@ -303,15 +303,15 @@
     "**WILL BE GRADED ON ACCURACY AND REASONING**\n",
     "\n",
     "B - Handles the physical aspect and connection\n",
-    "C - \n",
-    "A - \n",
-    "B - \n",
-    "B - \n",
-    "A - \n",
-    "C - \n",
-    "C - \n",
-    "C - \n",
-    "C - \n",
+    "C - Switches forward frames\n",
+    "A - MAC is different from ip because ip is all devices on a singular network have the same address while MAC identifies the individual devices\n",
+    "B - Forwads Frames\n",
+    "B - Ethernet and Network adapters are both physical\n",
+    "A - IP address because MAC is devices within networks while IP is devices using the ntwork\n",
+    "C - Implements correction\n",
+    "C - UDP is faster while TCP is safer\n",
+    "C - Transports and organizes trafficc flow\n",
+    "C - UDP is faster so packet loss is acceptable\n",
     "\n",
     "\n",
     "\n",
@@ -326,6 +326,17 @@
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
