--- a/_notebooks/2023-11-28-DigitalDivide.ipynb
+++ b/_notebooks/2023-11-28-DigitalDivide.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "## <font color = \"ADD8E6\"> YOUR answer </font>\n",
     "\n",
-    "Answer:"
+    "Answer: Digital Cafe's that would provide free internet and usage of devices at low to no cost, or providing a weaker, yet stable and cheaper access to the internet."
    ]
   },
   {
@@ -398,16 +398,16 @@
     "\n",
     "Answer questions below with solely the letter name! Make sure to have your <mark>popcorn hack</mark> completed as well.\n",
     "\n",
-    "    - [] Question 1 \n",
-    "    - [] Question 2\n",
-    "    - [] Question 3\n",
-    "    - [] Question 4\n",
-    "    - [] Question 5\n",
-    "    - [] Question 6\n",
-    "    - [] Question 7\n",
-    "    - [] Question 8\n",
-    "    - [] Question 9\n",
-    "    - [] Question 10\n",
+    "    - [C] Question 1 \n",
+    "    - [D] Question 2\n",
+    "    - [B] Question 3\n",
+    "    - [A] Question 4\n",
+    "    - [A] Question 5\n",
+    "    - [A] Question 6\n",
+    "    - [A] Question 7\n",
+    "    - [A] Question 8\n",
+    "    - [C] Question 9\n",
+    "    - [D] Question 10\n",
     "\n"
    ]
   }
